# reversi

./: Board.cpp  Board.h  CMakeLists.txt  ComputerBoard.cpp  ComputerBoard.h  Game.cpp  Game.h  GameLogic.h  Piece.cpp  Piece.h  Player.cpp  Player.h  PlayerComputer.cpp  PlayerComputer.h  PlayerHuman.cpp  PlayerHuman.h  README.md  Steps.cpp  Steps.h  Tests.cpp  Tests.h  a.out  main.cpp  makefile
Tests/: BoardSizeTest.cpp  CheckInputTest.cpp  ComputerMove.cpp  FlipTest.cpp  PrintOptionsTest.cpp  ReadMove.cpp  RowTest.cpp  WinnerTest.cpp  checkClientMove.cpp  main_test.cpp  test1.cpp
src/: Client.cpp  Client.h  DisplayScreen.cpp  DisplayScreen.h  PlayerHuman.cpp  PlayerHuman.h  Sign.h  noUse.cpp  noUse.h
